--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "author": "moriyuu",
   "bugs": "https://github.com/moriyuu/react-semi-modal/issues",
   "dependencies": {
-    "inobounce": "^0.1.6",
-    "styled-components": "^4.1.3"
+    "inobounce": "^0.1.6"
   },
   "devDependencies": {
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
-    "@types/styled-components": "^4.1.8",
     "netlify-cli": "^2.7.0",
     "parcel-bundler": "^1.11.0",
     "react": "^16.8.1",
@@ -18,6 +16,7 @@
     "rimraf": "^2.6.3",
     "rollup": "^1.1.2",
     "rollup-plugin-typescript2": "^0.19.2",
+    "sass": "^1.22.3",
     "typescript": "^3.3.3"
   },
   "files": [
