--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.8.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.2",
+    "rollup-plugin-scss": "^1.0.1",
     "rollup-plugin-typescript2": "^0.19.2",
     "sass": "^1.22.3",
     "typescript": "^3.3.3"
